@@ -3353,7 +3353,7 @@ changequote([,])dnl
 fi
 
 # For libtool versioning info, format is CURRENT:REVISION:AGE
-libtool_VERSION=6:19:0
+libtool_VERSION=6:20:0
 
 # Everything parsed; figure out what files and settings to use.
 case $enable_symvers in
